styles/style.css
/* ... */
/* Education Logos */
.education-container img {
    position: absolute;
    width: 40px;
    border-radius: 50%;
    right: -20px;
    top: 32px;
    z-index: 10;
}

.right-container img{
    left: -20px;
}

/* Mobile */

@media screen and (max-width:768px){
    .timeline{
        margin: 25px auto;
    }

    .timeline::after{
        left: 31px;
    }

    .education-container{
        width: 100%;
        padding-left: 80px;
        padding-right: 25px;
    }

    .right-container{
        left: 0;
    }

    .left-container {
        transform: translateX(100%);
    }

    .left-container img, .right-container img {
        left: 10px;
    }
}

/* Projects */

.projects {
    height: auto;
    width: 80%;
    position: relative;
    margin: auto;
    align-items: center;
    padding-top: 2%;
}

.projects-header {
    align-items: center;
    text-align: center;
}

.projects-header h1{
    font-size: 3.5rem;
    color: var(--hover-color);
    line-height: 2;
    font-weight: 500;
}

.projects-header p {
    font-weight: 300;
    color: var(--light-text);
}

.project-container {
    padding-top: 25px;
    padding-bottom: 75px;
    position: relative;
    width: 100%;
    height: auto;
    display: flex;
    gap: 70px;
    justify-content: center;
    align-items: center;
    justify-items: center;
}

/* Cards */
.project-card {
    perspective: 1000px;
}

/* Card animations */
.left-card .card.flipped {
    transform: rotateY(-180deg);
}

.right-card .card.flipped {
    transform: rotateY(180deg);
}

.card{
    position: relative;
    width: 500px;
    aspect-ratio: 1/1;
    transform-style: preserve-3d;
    transition: transform 1s;
    will-change: transform;
}

.cardfront, .cardback{
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 8px;
    backface-visibility: hidden;
}

/* Card front */
/* button to go to github */
.cardfront{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    transform: rotateY(0deg);
    cursor: pointer;
}

.card-img{
    flex: 1;
    display: flex;
    border-radius: 8px;
    align-items: center;
    justify-content: center;
}

.card-img img {
    border-radius: 8px;
    width: 500px;
    height: 500px;
    object-fit: cover;
}

/* Card Back */

.cardback {
    background-color: var(--light-text);
    flex-direction: column;
    display: flex;
    transform: rotateY(180deg);
    place-content: center;
    text-align: center;
    padding: 20px
}

.app-logo {
    align-items: center;
    justify-content: center;
    background-color: var(--light-text);
}

.app-logo img {
    width: 160px;
    height: auto;
    margin-bottom: 40px;
    background-color: var(--light-text);
}

.app-logo a {
    background-color: var(--light-text);
}

.cardback h1 {
    font-size: 2.5rem;
    margin-bottom: 15px;
    font-weight: 500;
    background-color: var(--light-text);
}

.cardback p {
    font-size: 1.25rem;
    background-color: var(--light-text);
    text-align: center;
}

.techstack {
    padding-top: 50px;
    background-color: var(--light-text);
}

.techstack ul {
    background-color: var(--light-text);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px
}

.techstack ul li {
    list-style: none;
    background-color: var(--light-text);
}

.tech-logo {
    width: 50px;
    aspect-ratio: 1/1;
    background-color: var(--light-text);
}

.tech-logo small {
    opacity: 0;
}

.tech-logo:hover small {
    opacity: 1;
}

/* logos are all transparent */
.tech-logo img {
    width: 50px;
    height: 50px;
    background-color: var(--light-text);
}

/* Mobile */
@media screen and (max-width: 768px) {
    .projects-header {
        padding-bottom: 10%;
    }

    .project-card {
        padding-bottom: 10%;
    }

    .card{
        width: 100%;
        aspect-ratio: 1/1;
    }

    .right-card .card.flipped {
        transform: rotateY(-180deg);
    }

    .project-container {
        display: inline;
    }

    .card-img img {
        width: 100%;
        height: 100%;
        object-fit: contain;
    }

    .app-logo img {
        width: 20%;
        height: auto;
        margin-bottom: 5%;
        background-color: var(--light-text);
    }

    .techstack {
        object-fit: contain;
    }

    .longstack {
        padding-top: 1%;
    }

    .techstack ul {
        gap: 1%;
    }

    .cardback h1 {
        font-size: 2rem;
    }
    
    .cardback p {
        font-size: 1rem;
    }
}

/* Contact */

.contact {
    border-top: #f2f2f2 groove 1px;
    max-width: 100%;
    height: 15%;
    align-items: center;
    text-align: center;
}

.contact h1 {
    color: var(--light-text);
    padding-top: 3%;
    font-size: 2rem;
    font-weight: 500;
}

.contact ul {
    padding-top: 45px;
    padding-bottom: 1%;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
}

.contact-logo {
    width: 40px;
    aspect-ratio: 1/1;
}

.contact-logo img {
    width: 40px;
    height: 40px;
}

/* popup */

.open-email, .close-button {
    background: none;
    outline: none;
    border: none;
    cursor: pointer;
}

.close-button {
    font-size: 40px;
    color: var(--hover-color);
}

.close-button:hover {
    color: var(--header-color);
}

#popup {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: var(--light-text);
    border: 1px solid var(--bg-color);
    border-radius: 10px;
    max-width: 80%;
    z-index: 15;
    width: 500px;
    align-items: center;
    transform: translate(-50%, -50%) scale(0);
    transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
    opacity: 0;
}

#popup.active  {
    transform: translate(-50%, -50%) scale(1);
    opacity: 1;
}

.popup-head {
    padding: 10px 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-weight: 500;
}
/* ... */

